@@ -232,6 +232,15 @@ operator|.
 name|getChildNodes
 argument_list|()
 decl_stmt|;
+specifier|final
+name|int
+name|nlLen
+init|=
+name|nl
+operator|.
+name|getLength
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -241,10 +250,7 @@ literal|0
 init|;
 name|i
 operator|<
-name|nl
-operator|.
-name|getLength
-argument_list|()
+name|nlLen
 condition|;
 name|i
 operator|++
