@@ -288,6 +288,15 @@ name|DEFAULT_IGNORE_TF
 argument_list|)
 argument_list|)
 expr_stmt|;
+specifier|final
+name|int
+name|nlLen
+init|=
+name|nl
+operator|.
+name|getLength
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -297,10 +306,7 @@ literal|0
 init|;
 name|i
 operator|<
-name|nl
-operator|.
-name|getLength
-argument_list|()
+name|nlLen
 condition|;
 name|i
 operator|++
